[package]
name = "cw-optimizoor"
version = "0.9.3"
authors = ["Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
rust-version = "1.69"
edition = "2021"
description = "A blazingly fast compiling & optimization tool for CosmWasm smart contracts."
documentation = "https://docs.rs/cw-optimizoor"
readme = "README.md"
repository = "https://github.com/mandrean/cw-optimizoor"
license = "MIT"
keywords = ["cosmwasm", "cw", "binaryen", "wasm", "optimizer"]
categories = ["development-tools::cargo-plugins", "cryptography::cryptocurrencies"]

[[bin]]
name = "cargo-cw-optimizoor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
binaryen = "0.12"
cargo = "0.71"
cargo-util = "0.2"
clap = { version = "4", features = ["derive"] }
colour = "0.7"
crates_io_api = "0.8"
futures = "0.3"
glob = "0.3"
hex = "0.4"
itertools = "0.11"
lazy_static = "1.4"
path-absolutize = "3.1"
rayon = "1.7"
semver = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
assert_cmd = "2"
cucumber = { version = "0.19", features = ["libtest", "macros"]}
petname = "1"
predicates = "3"
regex = "1.8"
thiserror = "1"

[[test]]
name = "e2e"
path = "tests/cucumber.rs"
harness = false
